--- a/mipsdump/mipsdump.fsproj
+++ b/mipsdump/mipsdump.fsproj
@@ -7,9 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Idc.fs" />
     <Compile Include="Instructions.fs" />
     <Compile Include="Disassembler.fs" />
     <Compile Include="Program.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Argu" Version="6.1.1" />
   </ItemGroup>
 
 </Project>
